--- a/MVCLayout/MVCLayout.csproj
+++ b/MVCLayout/MVCLayout.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include=".gitignore" />
     <Content Include="Content\favicon.ico" />
     <Content Include="Content\img\about\1.jpg" />
     <Content Include="Content\img\about\2.jpg" />
@@ -134,6 +135,8 @@
     <Content Include="Content\img\about\4.jpg" />
     <Content Include="Content\img\close-icon.svg" />
     <Content Include="Content\img\header-bg.jpg" />
+    <Content Include="Content\img\logo-asp.png" />
+    <Content Include="Content\img\logo-asp1.png" />
     <Content Include="Content\img\logos\facebook.svg" />
     <Content Include="Content\img\logos\google.svg" />
     <Content Include="Content\img\logos\ibm.svg" />
